--- a/src/index.css
+++ b/src/index.css
@@ -116,14 +116,20 @@ ul {
 .trending .slider .right {
   position: absolute;
   top: 0;
-  color: #ffffff61;
+  color: #ffffffa2;
   font-size: 40px;
   z-index: 1;
-  width: 20%;
+  width: 26%;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+@media (min-width: 425px) {
+  .trending .slider .left,
+  .trending .slider .right {
+    width: 22%;
+  }
 }
 @media (min-width: 768px) {
   .trending .slider .left,
@@ -145,9 +151,10 @@ ul {
   display: flex;
   transition: 0.8s;
 }
-.trending .slider > div > .slide {
+.slider > div > .slide {
   flex-shrink: 0;
   cursor: pointer;
+  position: relative;
 }
 
 @media (min-width: 768px) {
@@ -160,6 +167,14 @@ ul {
   height: 140px;
   object-fit: cover;
   display: block;
+}
+.slide .cover {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background-color: hsl(0deg 0% 0% / 20%);
 }
 @media (min-width: 768px) {
   .trending .slide img {
@@ -194,20 +209,25 @@ ul {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  color: #ffffffb1;
+  color: #ffffffa2;
   font-size: 26px;
   z-index: 1;
-  width: 17%;
+  width: 23%;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
+@media (min-width: 425px) {
+  .slider-c .slider .left,
+  .slider-c .slider .right {
+    width: 20%;
+  }
+}
 @media (min-width: 768px) {
   .slider-c .slider .left,
   .slider-c .slider .right {
-    width: 8%;
+    width: 10%;
   }
 }
 
@@ -225,17 +245,11 @@ ul {
   display: flex;
   transition: 0.4s;
 }
-.slider-c .slider > div .slide {
-  cursor: pointer;
-}
+
 .slider-c .slider .slide:not(:last-child) {
   margin-right: 0.3vw;
 }
-@media (min-width: 768px) {
-  .slider-c .slider .slide:not(:last-child) {
-    margin-right: 0.3vw;
-  }
-}
+
 .slider-c > div .slide img {
   display: block;
   width: 40vw;
@@ -612,6 +626,11 @@ header .search-icon svg {
 .error {
   margin: 50px auto;
   width: fit-content;
+  height: 53.5vh;
+  padding-left: 10px;
+}
+.no-result {
+  height: 53.5vh;
 }
 footer {
   background: var(--forthColor);
