--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@
 
 body {
   font-family: "Nunito", sans-serif;
-  background-color: #ffe765;
+  background-color: #e9d87a;
 }
 a {
   text-decoration: none;
@@ -89,11 +89,15 @@ ul {
 /* end global rules */
 .shared {
   padding-top: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100vh;
 }
 .home {
   padding-top: 22px;
   padding-bottom: 30px;
-  margin: auto;
+  margin: 0 auto;
   width: fit-content;
 }
 
